Disable and hide autoupdate (Issue #10)

--- a/build.properties
+++ b/build.properties
@@ -22,6 +22,12 @@ electron.libfolder = lib/net45
 electron.enableautoupdate = false
 electron.userdata.search = // Set the user path according to application's name.
 electron.userdata.replace = app.setPath('userData', path.join(path.dirname(process.execPath), '..', '..', 'data'))
+electron.appasar.file = app/updater.js
+electron.appasar.search = var baseUrl = exports.updateUrl(appConfig.updates, platform, arch)
+electron.appasar.replace = var baseUrl = null
+electron.appasar.file2 = app/extensions/brave/gen/app.entry.js
+electron.appasar.search2 = f.showUpdate=Q.isUpdateVisible(e)
+electron.appasar.replace2 = f.showUpdate=false
 
 # Official artifacts
 atf.id = Brave
