Upgrade to Brave 0.61.5

--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ core.dir = ../portapps
 # App
 app = brave
 app.name = Brave
-app.type = electron
-app.version = 0.25.302
+app.type = archive
+app.version = 0.61.5
 
 # Portable app
 papp.id = ${app}-portable
@@ -16,26 +16,13 @@ papp.desc = ${app.name} portable on Windows by Portapps
 papp.url = https://github.com/portapps/${papp.id}
 papp.folder = app
 
-# Electron
-electron.executionstub = Brave_ExecutionStub.exe
-electron.libfolder = lib/net45
-electron.enableautoupdate = false
-electron.userdata.search = // Set the user path according to application's name.
-electron.userdata.replace = app.setPath('userData', path.join(path.dirname(process.execPath), '..', '..', 'data'))
-electron.appasar.file = app/updater.js
-electron.appasar.search = var baseUrl = exports.updateUrl(appConfig.updates, platform, arch)
-electron.appasar.replace = var baseUrl = null
-electron.appasar.file2 = app/extensions/brave/gen/app.entry.js
-electron.appasar.search2 = f.showUpdate=Q.isUpdateVisible(e)
-electron.appasar.replace2 = f.showUpdate=false
-
 # Official artifacts
 atf.id = Brave
-atf.win32.filename = BraveSetup-win32
+atf.win32.filename = brave_installer-win32
 atf.win32.ext = .exe
-atf.win32.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-ia32.exe
-atf.win32.assertextract = RELEASES
-atf.win64.filename = BraveSetup-win64
+atf.win32.url = https://github.com/brave/brave-browser/releases/download/v${app.version}/brave_installer-ia32.exe
+atf.win32.assertextract = chrome.7z
+atf.win64.filename = brave_installer-win64
 atf.win64.ext = .exe
-atf.win64.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-x64.exe
-atf.win64.assertextract = RELEASES
+atf.win64.url = https://github.com/brave/brave-browser/releases/download/v${app.version}/brave_installer-x64.exe
+atf.win64.assertextract = chrome.7z
