Switch build process

--- a/build.xml
+++ b/build.xml
@@ -17,30 +17,16 @@
   <target name="release" depends="release.app" description="Release"/>
 
   <target name="prepare">
-    <echo message="Extracting app.asar..."/>
-    <exec executable="asar.cmd" failonerror="true" dir="${build.path}\${papp.folder}\app-${app.version}\resources">
-      <arg value="extract"/>
-      <arg value="app.asar"/>
-      <arg value="app"/>
-    </exec>
+    <echo message="Preparing release..."/>
+    <delete dir="${tmp.path}\extract2"/>
 
-    <echo message="Replacing in app.asar..."/>
-    <assertfile file="${build.path}\${papp.folder}\app-${app.version}\resources\app\${electron.appasar.file}"/>
-    <replace file="${build.path}\${papp.folder}\app-${app.version}\resources\app\${electron.appasar.file}">
-      <replacefilter token="${electron.appasar.search}" value="${electron.appasar.replace}"/>
-    </replace>
-    <assertfile file="${build.path}\${papp.folder}\app-${app.version}\resources\app\${electron.appasar.file2}"/>
-    <replace file="${build.path}\${papp.folder}\app-${app.version}\resources\app\${electron.appasar.file2}">
-      <replacefilter token="${electron.appasar.search2}" value="${electron.appasar.replace2}"/>
-    </replace>
-
-    <echo message="Packaging app.asar..."/>
-    <exec executable="asar.cmd" failonerror="true" dir="${build.path}\${papp.folder}\app-${app.version}\resources">
-      <arg value="pack"/>
-      <arg value="app"/>
-      <arg value="app.asar"/>
-    </exec>
-    <delete dir="${build.path}\${papp.folder}\app-${app.version}\resources\app"/>
+    <echo message="Extracting embedded chrome.7z"/>
+    <property name="extract.path2" value="${tmp.path}\extract2"/>
+    <sevenzip-ax src="${extract.path}\chrome.7z" dest="${extract.path2}"/>
+    <delete dir="${extract.path}"/>
+    <move todir="${extract.path}">
+      <fileset dir="${extract.path2}\Chrome-bin"/>
+    </move>
   </target>
 
 </project>
