--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,8 @@ core.dir = ../portapps
 app = brave
 app.name = Brave
 app.type = archive
-app.version = 0.63.55
+app.version = 0.64.75
+app.homepage = https://www.brave.com
 
 # Portable app
 papp.id = ${app}-portable
