--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,8 @@ core.dir = ../portapps
 app = brave
 app.name = Brave
 app.type = archive
-app.version = 0.68.132
+app.version = 0.68.138
+app.release = 31
 app.homepage = https://www.brave.com
 
 # Portable app
