--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ core.dir = ../portapps
 app = brave
 app.name = Brave
 app.type = archive
-app.version = 1.4.96
-app.release = 50
+app.version = 1.5.115
+app.release = 51
 app.homepage = https://www.brave.com
 
 # Portable app
@@ -21,9 +21,9 @@ papp.folder = app
 atf.id = Brave
 atf.win32.filename = brave_installer-win32
 atf.win32.ext = .exe
-atf.win32.url = https://github.com/brave/brave-browser/releases/download/v${app.version}/brave_installer-ia32.exe
+atf.win32.url = https://brave-browser-downloads.s3.brave.com/latest/brave_installer-ia32.exe
 atf.win32.assertextract = chrome.7z
 atf.win64.filename = brave_installer-win64
 atf.win64.ext = .exe
-atf.win64.url = https://github.com/brave/brave-browser/releases/download/v${app.version}/brave_installer-x64.exe
+atf.win64.url = https://brave-browser-downloads.s3.brave.com/latest/brave_installer-x64.exe
 atf.win64.assertextract = chrome.7z
